--- a/chsie-popups/admin/app/package.json
+++ b/chsie-popups/admin/app/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "react": "^16.6.1",
+    "react-color": "^2.17.0",
     "react-dom": "^16.6.1",
+    "react-motion": "^0.5.2",
+    "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.1.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
+    "react-spring": "^7.2.10",
+    "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-watch": "^1.1.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +33,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.0"
+  }
 }
