--- a/chsie-popups/admin/app/package.json
+++ b/chsie-popups/admin/app/package.json
@@ -7,12 +7,13 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "react": "^16.8.2",
     "react-color": "^2.17.0",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.8.2",
     "react-motion": "^0.5.2",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.1.1",
     "react-scripts": "^2.1.2",
-    "react-spring": "^7.2.10",
+    "react-spring": "^8.0.7",
+    "react-svg-spinner": "^1.0.2",
     "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
