--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
+    "gulp-zip": "^4.2.0",
     "run-sequence": "^2.2.1"
   },
   "dependencies": {
