--- a/chsie-popups/admin/app/package.json
+++ b/chsie-popups/admin/app/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "redux-watch": "^1.1.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
